<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        />
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/search"
        />

    <item
        android:id="@+id/plus"
        android:title="@string/home"
        android:icon="@drawable/add"
        />
    <item
        android:id="@+id/notifications"
        android:title="@string/notification"
        android:icon="@drawable/notification"
        />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        />
</menu>