<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="341dp"
        android:background="@drawable/widget_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="219dp"
            android:layout_height="41dp"
            android:layout_gravity="left"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inter"
            android:text="@string/welcome"
            android:textColor="@color/texts"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/description"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inter"
            android:text="@string/description"
            android:textColor="@color/texts"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginbutton"
            android:layout_width="320dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/inter"
            android:text="@string/login"
            android:textColor="@color/texts"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signupbutton"
            android:layout_width="320dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background2"
            android:fontFamily="@font/inter"
            android:text="@string/signup"
            android:textColor="@color/texts"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>